# cINR

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  configure.cmake  vnr_train_docker.sh  vnr_view_docker.sh
base/: .gitmodules  CMakeLists.txt  ovrpy_environment.yml
base/apps/: main_app.cpp
base/github-actions/cuda-cmake-github-actions/scripts/actions/: install_cuda_windows.ps1
base/github-actions/optix-cmake-github-actions/: install_optix.ps1  install_optix.sh
base/github-actions/ospray-cmake-github-actions/: install_ospray_ubuntu.sh  install_ospray_windows.ps1
base/ovr/: CMakeLists.txt  renderer.h  scene.cpp  scene.h
base/ovr/common/: evaluation_kernel.h
base/ovr/common/cuda/: cuda_buffer.h  cuda_math.h  cuda_utils.h
base/ovr/devices/optix7/: device_impl.cpp  params.h  shaders_common.h  shaders_pathtracing.cu  shaders_raymarching.cu  volume.cpp  volume.h
base/ovr/devices/ospray/: device_impl.cpp  device_impl.h
base/ovr/serializer/: serializer_json.cpp
base/python/: python.cpp  python.h
base/test/: test_python_bindings.py  test_rendering.py
base/vscode/: qi-linux-launch.json  qi-linux-settings.json  qi-redbull-gpu3-launch.json  qi-redbull-gpu3-settings.json  qi-win-launch.json  qi-win-settings.json
data/: beechnut_RM.csv  dns_PT.csv  dns_RM.csv  flower_RM(disabled).csv  flower_RM(enabled).csv  miranda_RM(Disabled).csv  miranda_RM(enabled).csv  miranda_RM.csv  richtmyer_RM(disabled).csv  richtmyer_RM(enabled).csv
data/configs/: config_beechnut.cfg  config_chameleon.cfg  config_dns.cfg  config_fialka.cfg  config_flower.cfg  config_hagelin.cfg  config_heatrelease.cfg  config_magnetic.cfg  config_miranda.cfg  config_richtmyer.cfg  config_rotstrat.cfg  config_scrambler.cfg  scene_beechnut.json  scene_chameleon.json  scene_dns.json  scene_fialka_m125.json  scene_flower.json  scene_hagelin.json  scene_heatrelease_1atm.json  scene_magnetic_reconnection.json  scene_miranda.json  scene_richtmyer_meshkov.json  scene_rotstrat_temperature.json  scene_s3d_later_time.json  scene_s3d_later_time.py  scene_scrambler_phone.json
data/configs/scene_s3d_later_time/: config_H.cfg  config_H2.cfg  config_O2.cfg  config_temp.cfg  field_H.json  field_H2.json  field_H2NO.json  field_H2O.json  field_H2O2.json  field_HNO.json  field_HO2.json  field_N.json  field_N2.json  field_N2O.json  field_NH.json  field_NH2.json  field_NH3.json  field_NNH.json  field_NO.json  field_NO2.json  field_O.json  field_O2.json  field_OH.json  field_pressure.json  field_temp.json  field_velx.json  field_vely.json  field_velz.json
ovr/: api.cpp  api.h  api_internal.h  app.cu  serializer.cpp  serializer.h
ovr/apps/: CMakeLists.txt  batch_trainer.cpp  evaluate_app.cpp  int_dual_volume.cpp  int_volume.cpp  view_model.cpp
ovr/core/: CMakeLists.txt  array.h  instantvnr_types.cu  instantvnr_types.h  mathdef.h
ovr/core/networks/: nnapi.h  tcnn_impl.cu  tcnn_network.h
ovr/core/samplers/: neural_sampler.cpp  neural_sampler.cu  neural_sampler.h  sampler.cu  sampler.h
ovr/core/volumes/: macrocell.cu  macrocell.h  neural_volume.cu  simple_volume.cu  volumes.h
ovr/devices/nncache/: CMakeLists.txt  array.cpp  array.h  cachemanager.cu  cachemanager.h  device.cu  device.h  framebuffer.h  launchparams.h  space_partition.cu  space_partition.h  ui_controls.cpp  volume.cu  volume.h
ovr/devices/nncache/renderer/: dda.h  method_megakernel.cu  method_pathtracing.cu  method_raymarching.cu  methods.h  pathtracing_iter.inc  raymarching_iter.inc  raytracing.h  renderer.cu  renderer.h  renderer_nncache.cu
stream_old/: .gitignore
stream_old/Applications/: CMakeLists.txt
stream_old/Applications/DVR-ray-caster/: CMakeLists.txt
stream_old/Applications/DVR-ray-caster/include/: Application.hpp  RayCasters_helpers.hpp  VolumeRayCaster.hpp
stream_old/Applications/DVR-ray-caster/include/SDL2/: SDLGLWindow.hpp
stream_old/Applications/DVR-ray-caster/src/: Application.cu  Display_helper.cu  RayCasters.cu  TransferFunction.cpp  VolumeRayCaster.cu  main.cpp
stream_old/Applications/DVR-ray-caster/src/SDL2/: SDLGLWindow.cpp
stream_old/Applications/DVR-ray-caster/src/imgui/: imgui.cpp  imgui_draw.cpp  imgui_impl_opengl3.cpp  imgui_impl_sdl2.cpp
stream_old/GcCore/: platform.cmake
stream_old/GcCore/api/glm-0.9.9.0/glm/glm/detail/: setup.hpp
stream_old/GcCore/dependencies/: .gitignore  CMakeLists.txt  glm.cmake
stream_old/GcCore/include/GcCore/cuda/libCommon/: CudaError.hpp  DynamicArray3dHost.hpp  K_DynamicArray3dDevice.hpp  QueueDevice.hpp  Surface3dDevice.hpp  Texture3dDevice.hpp
stream_old/GcCore/include/GcCore/cuda/libGPUCache/: CacheManager.hpp  CacheManagerKernels.hpp  K_CacheDevice.hpp  K_CacheManager.hpp  Predicate.hpp  RequestHandler.hpp
stream_old/GcCore/include/GcCore/cuda/libPreprocessor/: BrickProcessorPredicate.hpp  Mipmapper.hpp
stream_old/GcCore/include/GcCore/libCommon/: LRUCache.hpp
stream_old/GcCore/include/GcCore/libData/: Brick.hpp  BricksManager.hpp  RAWFile.hpp  VolumeConfiguration.hpp
stream_old/GcCore/src/: CMakeLists.txt
stream_old/GcCore/src/cuda/libCommon/: CMakeLists.txt
stream_old/GcCore/src/cuda/libGPUCache/: CMakeLists.txt  CacheManagerKernels.cu
stream_old/GcCore/src/cuda/libPreprocessor/: CMakeLists.txt  Mipmapper.cu
stream_old/GcCore/src/libCommon/: CMakeLists.txt  Logger.cpp
stream_old/GcCore/src/libData/: BricksManager.cu  CMakeLists.txt  RAWFile.cpp  VolumeConfiguration.cpp
stream_old/GcCore/src/libMath/: CMakeLists.txt
stream_old/GcCore/src/libNetwork/: CMakeLists.txt
stream_old/GcCore/src/libPreprocessor/: CMakeLists.txt
stream_old/GcCore/src/libPython/: CMakeLists.txt
stream_old/GcCore/src/libTinyXml/: CMakeLists.txt
